@@ -1,5 +1,11 @@
 2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/gtk/unittest/case.py:
+	* gaupol/gtk/unittest/__init__.py:
+	Minor changes.
+
+2007-05-17  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/reversion:
 	* gaupol/reversion/test:
 	Set svn:ignore properties on directories.
